Notes updated: errors type I and II; cutoff.

--- a/project.ipynb
+++ b/project.ipynb
@@ -30,7 +30,9 @@
    "source": [
     "### To-do\n",
     "- check outliers, there's dti 999 (but it's possible, ok, 10x alavancagem)\n",
-    "- make a summary of the metrics from all models"
+    "- make a summary of the metrics from all models\n",
+    "- remember to write something about errors type I and II\n",
+    "- make an argument about the cutoff (maybe try the predictions with different cutoffs)"
    ]
   },
   {
