--- a/project.ipynb
+++ b/project.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "50437aad",
    "metadata": {},
    "outputs": [
@@ -262,65 +262,59 @@
       "\n",
       "Statistical summary of the numerical features:\n",
       "\n",
-      "        loan_amnt  funded_amnt  funded_amnt_inv    int_rate  installment  \\\n",
-      "count 331304.0000  331304.0000      331304.0000 331304.0000  331304.0000   \n",
-      "mean   15485.6705   15485.6705       15479.0312     12.5709     452.0909   \n",
-      "std     9182.7264    9182.7264        9181.2607      4.6853     264.2243   \n",
-      "min     1000.0000    1000.0000         725.0000      5.3200      14.7700   \n",
-      "25%     8100.0000    8100.0000        8100.0000      8.8100     259.2400   \n",
-      "50%    14000.0000   14000.0000       14000.0000     11.9900     387.1500   \n",
-      "75%    20700.0000   20700.0000       20675.0000     15.3100     602.3000   \n",
-      "max    40000.0000   40000.0000       40000.0000     30.9900    1618.2400   \n",
+      "                      count       mean        std       min        25%  \\\n",
+      "loan_amnt       331304.0000 15485.6705  9182.7264 1000.0000  8100.0000   \n",
+      "funded_amnt     331304.0000 15485.6705  9182.7264 1000.0000  8100.0000   \n",
+      "funded_amnt_inv 331304.0000 15479.0312  9181.2607  725.0000  8100.0000   \n",
+      "int_rate        331304.0000    12.5709     4.6853    5.3200     8.8100   \n",
+      "installment     331304.0000   452.0909   264.2243   14.7700   259.2400   \n",
+      "annual_inc      331304.0000 80425.2580 91150.7789    0.0000 48000.0000   \n",
+      "dti             331138.0000    19.0286    12.5358   -1.0000    12.0500   \n",
+      "delinq_2yrs     331304.0000     0.3369     0.9184    0.0000     0.0000   \n",
+      "inq_last_6mths  331303.0000     0.6083     0.8880    0.0000     0.0000   \n",
+      "open_acc        331304.0000    11.8598     5.7909    0.0000     8.0000   \n",
+      "pub_rec         331304.0000     0.2468     0.6682    0.0000     0.0000   \n",
+      "revol_bal       331304.0000 16049.1716 23183.3434    0.0000  5507.0000   \n",
+      "revol_util      331074.0000    48.5172    24.8231    0.0000    29.6000   \n",
+      "total_acc       331304.0000    24.8545    12.3119    2.0000    16.0000   \n",
+      "out_prncp       331304.0000   678.8532  3493.3046    0.0000     0.0000   \n",
+      "total_pymnt     331304.0000 13235.1261 10045.6296    0.0000  5593.8933   \n",
+      "target          310679.0000     0.3337     0.4715    0.0000     0.0000   \n",
       "\n",
-      "        annual_inc         dti  delinq_2yrs  inq_last_6mths    open_acc  \\\n",
-      "count  331304.0000 331138.0000  331304.0000     331303.0000 331304.0000   \n",
-      "mean    80425.2580     19.0286       0.3369          0.6083     11.8598   \n",
-      "std     91150.7789     12.5358       0.9184          0.8880      5.7909   \n",
-      "min         0.0000     -1.0000       0.0000          0.0000      0.0000   \n",
-      "25%     48000.0000     12.0500       0.0000          0.0000      8.0000   \n",
-      "50%     67314.0000     18.1900       0.0000          0.0000     11.0000   \n",
-      "75%     95000.0000     25.0900       0.0000          1.0000     15.0000   \n",
-      "max   9757200.0000    999.0000      21.0000          5.0000     81.0000   \n",
+      "                       50%        75%          max  \n",
+      "loan_amnt       14000.0000 20700.0000   40000.0000  \n",
+      "funded_amnt     14000.0000 20700.0000   40000.0000  \n",
+      "funded_amnt_inv 14000.0000 20675.0000   40000.0000  \n",
+      "int_rate           11.9900    15.3100      30.9900  \n",
+      "installment       387.1500   602.3000    1618.2400  \n",
+      "annual_inc      67314.0000 95000.0000 9757200.0000  \n",
+      "dti                18.1900    25.0900     999.0000  \n",
+      "delinq_2yrs         0.0000     0.0000      21.0000  \n",
+      "inq_last_6mths      0.0000     1.0000       5.0000  \n",
+      "open_acc           11.0000    15.0000      81.0000  \n",
+      "pub_rec             0.0000     0.0000      86.0000  \n",
+      "revol_bal       10583.0000 19084.0000 1044210.0000  \n",
+      "revol_util         48.0000    67.3000     182.8000  \n",
+      "total_acc          23.0000    32.0000     176.0000  \n",
+      "out_prncp           0.0000     0.0000   40000.0000  \n",
+      "total_pymnt     10584.4760 18391.8971   59808.2621  \n",
+      "target              0.0000     1.0000       1.0000  \n",
       "\n",
-      "          pub_rec    revol_bal  revol_util   total_acc   out_prncp  \\\n",
-      "count 331304.0000  331304.0000 331074.0000 331304.0000 331304.0000   \n",
-      "mean       0.2468   16049.1716     48.5172     24.8545    678.8532   \n",
-      "std        0.6682   23183.3434     24.8231     12.3119   3493.3046   \n",
-      "min        0.0000       0.0000      0.0000      2.0000      0.0000   \n",
-      "25%        0.0000    5507.0000     29.6000     16.0000      0.0000   \n",
-      "50%        0.0000   10583.0000     48.0000     23.0000      0.0000   \n",
-      "75%        0.0000   19084.0000     67.3000     32.0000      0.0000   \n",
-      "max       86.0000 1044210.0000    182.8000    176.0000  40000.0000   \n",
+      "Statistical summary of the categorical features:\n",
       "\n",
-      "       total_pymnt      target  \n",
-      "count  331304.0000 310679.0000  \n",
-      "mean    13235.1261      0.3337  \n",
-      "std     10045.6296      0.4715  \n",
-      "min         0.0000      0.0000  \n",
-      "25%      5593.8933      0.0000  \n",
-      "50%     10584.4760      0.0000  \n",
-      "75%     18391.8971      1.0000  \n",
-      "max     59808.2621      1.0000  \n",
-      "\n",
-      "Statistical summary of the numerical features:\n",
-      "\n",
-      "             term   grade emp_title emp_length home_ownership  \\\n",
-      "count      331304  331304    300514     307479         331304   \n",
-      "unique          2       7     90441         11              4   \n",
-      "top     36 months       B   Teacher  10+ years       MORTGAGE   \n",
-      "freq       230667   98290      6412     109514         164411   \n",
-      "\n",
-      "       verification_status issue_d             purpose addr_state  \\\n",
-      "count               331304  331304              331304     331304   \n",
-      "unique                   3      11                  13         50   \n",
-      "top        Source Verified  Mar-16  debt_consolidation         CA   \n",
-      "freq                133327   56649              189096      46585   \n",
-      "\n",
-      "       earliest_cr_line loan_status  origin  \n",
-      "count            331304      310704  331304  \n",
-      "unique              685           6       2  \n",
-      "top              Sep-04  Fully Paid   Train  \n",
-      "freq               2603      207036  310704  \n"
+      "                      count unique                 top    freq\n",
+      "term                 331304      2           36 months  230667\n",
+      "grade                331304      7                   B   98290\n",
+      "emp_title            300514  90441             Teacher    6412\n",
+      "emp_length           307479     11           10+ years  109514\n",
+      "home_ownership       331304      4            MORTGAGE  164411\n",
+      "verification_status  331304      3     Source Verified  133327\n",
+      "issue_d              331304     11              Mar-16   56649\n",
+      "purpose              331304     13  debt_consolidation  189096\n",
+      "addr_state           331304     50                  CA   46585\n",
+      "earliest_cr_line     331304    685              Sep-04    2603\n",
+      "loan_status          310704      6          Fully Paid  207036\n",
+      "origin               331304      2               Train  310704\n"
      ]
     }
    ],
@@ -337,12 +331,12 @@
     "# Selects the numeric features and summons the statistical analysis\n",
     "lista = emprestimos.dtypes[nums].index.to_list()\n",
     "print('Statistical summary of the numerical features:\\n')\n",
-    "print(emprestimos[lista].drop('id', axis=1).describe())\n",
+    "print(emprestimos[lista].drop('id', axis=1).describe().T)\n",
     "\n",
     "# The same for the categorical features\n",
     "lista = emprestimos.dtypes[objs].index.to_list()\n",
-    "print('\\nStatistical summary of the numerical features:\\n')\n",
-    "print(emprestimos[lista].describe())\n"
+    "print('\\nStatistical summary of the categorical features:\\n')\n",
+    "print(emprestimos[lista].describe().T)\n"
    ]
   },
   {
